[package]
name = "color-bandit"
authors = ["Anton Hughes <kurrent93@gmail.com>"]
description = "Color palette generator"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]


[dependencies]
serde = { version = "1.0.192", features = ["derive"] }
anyhow = "1"
color-thief = "0.2.2"
http = "0.2"
image = "0.24.7"


serde_json = "1.0.108"
spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v2.0.1" }
palette_extract = "0.1.0"

[workspace]
